repl scroll fix, now we have only one call to editor_gen. Changed location of lower console so its wider, also added a final.css CodeMirror style to keep height at 100% to fix the background and a overflow auto to keep overflow under control.

--- a/root/static/final.css
+++ b/root/static/final.css
@@ -45,3 +45,11 @@
     font-family:Helvetica Neue,Verdana,Helvetica,Arial,sans-serif;
     color:#555;
 }
+
+.CodeMirror {
+  height: 100%;
+}
+.CodeMirror-scroll {
+  overflow: auto;
+}
+
